# Runa-Agent-Digital-Being

./: .env.example  .gitignore  LEGAL-NOTICE.md  MYTHIC_ENGINEERING.md  NOTICE  ORIGINS.md  PHILOSOPHY.md  README.md  RUNAFREYJASDOTTIR_GITHUB_CODE_HARVEST.md  RUNA_ADVANCED_AGI_ENGINEERING_GUIDE.md  Runa-Agent-Digital-Being.md  Runa_Agent_Digital_Being.md  TASK_runa_bootstrap.md  TASK_runa_python_craft.md  TASK_runa_research_corpus.md  TASK_runa_research_corpus_2.md  THIRD_PARTY_NOTICES.md  The_Saga_of_Runa.md  Yggdrasil_and_Huginn_and_Muninn_Theory.md  pyproject.toml
assets/: README.md
config/: README.md  runa.example.yaml
config/profiles/: README.md
deploy/: README.md
deploy/docker/: README.md
deploy/examples/: README.md
deploy/pi/: README.md
deploy/systemd/: README.md
docs/: DEVLOG.md  README.md  REPO_MAP.md  SYSTEM_VISION.md
docs/AI_OS_Research/: AI_OS_RESEARCH_2026.md
docs/adapters/: README.md
docs/architecture/: ARCHITECTURE.md  DATA_FLOW.md  DOMAIN_MAP.md  README.md  ROBUST_AGENT_ENGINEERING_PLAN.md
docs/archive/: README.md
docs/decisions/: 0001-mythic-engineering-bootstrap-2026-05-17.md  0002-initial-subsystem-decisions-2026-05-17.md  0003-research-corpus-2026-05-17.md  0004-python-craft-corpus-2026-05-17.md  0005-research-corpus-ii-2026-05-17.md  HERMES_OPENCLAW_DESIGN_ANTI_PATTERNS.md  README.md
docs/design/: README.md  RUNA_ECOSYSTEM_IDEA_HARVEST.md
docs/development/: README.md
docs/methodology/: README.md
docs/operations/: README.md  RUNA_PROJECT_FILE_ORGANIZATION_AND_STARTUP_GUIDE.md
docs/phd-2040/: CURRICULUM.md  README.md
docs/philosophy/: README.md
docs/plugins/: README.md
docs/python/: 01-exception-design.md  02-result-types-vs-exceptions.md  03-defensive-programming-design-by-contract.md  04-preconditions-postconditions-invariants.md  05-idempotency-design.md  06-retry-strategies.md  07-circuit-breaker.md  08-bulkhead-pattern.md  09-timeout-patterns.md  10-graceful-degradation.md  11-crash-only-software.md  12-supervisor-trees.md  13-watchdog-timers.md  14-health-checks.md  15-self-repair-reconciliation.md  16-state-machines-reliability.md  17-saga-pattern.md  18-chaos-engineering.md  19-asyncio-advanced.md  20-thread-safety-python.md  21-multiprocessing-deep-dive.md  22-concurrent-futures-patterns.md  23-async-cancellation.md  24-queue-channel-patterns.md  25-type-hints-mastery.md  26-mypy-strict-mode.md  27-pydantic-runtime-validation.md  28-protocol-classes.md  29-dataclasses-namedtuple-attrs.md  30-pytest-mastery.md  31-hypothesis-property-based-testing.md  32-mutation-testing.md  33-snapshot-testing.md  34-integration-e2e-testing.md  35-test-doubles.md  36-profiling-python.md  37-memory-profiling.md  38-caching-strategies.md  39-lazy-evaluation.md  40-c-extensions-rust-pyo3.md  (+12 more)
docs/research/: 01-memgpt-os-memory-hierarchies.md  02-episodic-memory-architectures.md  03-embedding-models-landscape.md  04-rag-evolution.md  05-long-context-vs-retrieval.md  06-knowledge-graphs-ai-memory.md  07-memory-consolidation-and-forgetting.md  08-sqlite-vss-embedding-in-database.md  09-react-reasoning-acting.md  10-reflexion-self-criticism.md  100-sovereign-ai-ethics-alignment.md  11-autogen-multi-agent.md  12-voyager-lifelong-learning.md  13-tree-of-thoughts-structured-reasoning.md  14-constitutional-ai.md  15-prompt-engineering.md  16-quantization-local-inference.md  17-mixture-of-experts.md  18-long-context-attention.md  19-rlhf-dpo-preference-optimization.md  20-speculative-decoding.md  31-edge-llm-pi5.md  (+80 more)
examples/: README.md
scripts/: README.md
src/: README.md
tests/: README.md
tools/: README.md
(+244 files in other folders)
