[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "runa-agent"
version = "0.0.0"
description = "Runa Agent — a sovereign autonomous AI digital-being. See docs/SYSTEM_VISION.md."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Volmarr Wyrd" },
]
keywords = [
    "ai-agent",
    "digital-being",
    "autonomous",
    "mythic-engineering",
    "norse",
    "runa",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Dependencies will be declared as the first slice lands.
# Until then, only the standard library is assumed.
dependencies = []

[project.optional-dependencies]
# Adapter dependency groups will be declared per adapter as each adapter
# ships. Operators install only the adapters they need.
# Example shape (to be filled in):
#   discord    = ["discord.py>=2.3"]
#   telegram   = ["python-telegram-bot>=21"]
#   matrix     = ["matrix-nio>=0.24"]
#   ollama     = ["ollama>=0.1"]
#   openrouter = ["openai>=1.0"]  # OpenRouter speaks OpenAI protocol
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
# The single official CLI entry point — Munnr.
runa = "runa.cli.main:main"

[project.urls]
Homepage = "https://github.com/hrabanazviking/Runa-Agent-Digital-Being"
Source   = "https://github.com/hrabanazviking/Runa-Agent-Digital-Being"
Issues   = "https://github.com/hrabanazviking/Runa-Agent-Digital-Being/issues"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["src/runa"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["docs/methodology", "docs/archive", "vendor"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes baseline
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # flake8-bugbear
    "SIM",           # flake8-simplify
    "TID",           # tidy imports
    "PL",            # pylint subset
    "RUF",           # ruff-specific
]
ignore = [
    "PLR2004",  # magic-value-comparison — too noisy at this stage
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/runa"]
exclude = ["tests/", "docs/", "scripts/"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: end-to-end tests through the real CLI / gateway (opt-in)",
    "requires_ollama: tests that need a local Ollama instance",
    "requires_lmstudio: tests that need a local LM Studio instance",
]

[tool.coverage.run]
source = ["src/runa"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
